--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -8,6 +8,8 @@
         h1{
             text-align: center;
             color: color-mix(in srgb, gray 10%, purple 50%);
+            font-variant: small-caps;
+            text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.124);
         }
 
 
@@ -18,7 +20,7 @@
             
         }
         body{
-            background-color: rgb(30, 174, 174);
+            background: linear-gradient(to right, #1eb9b9 , #47cbdc  );
            padding: 20px;
            font-family: Arial, Helvetica, sans-serif;
            text-align: justify;
@@ -30,17 +32,23 @@
             width: 500px;
             background-color: white;
             padding: 40px;
-            border-radius: 0px 0px 10px 10px;
-            box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.372);
-            background-color: bisque;
+            border-radius: 10px 10px 10px 10px;
+            box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.31);
+        }
+        iframe{
+            border: 1px solid rgba(0, 0, 0, 0.091);
+            box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.167);
         }
     </style>
 </head>
 <body>
     <main>
-        <h1>teste com iframe</h1>
+        <h1>Teste Com Iframe</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto voluptatum unde aliquam excepturi molestiae incidunt, rerum reprehenderit dolores voluptatibus veniam, neque vitae quisquam? Quibusdam animi expedita laboriosam accusamus ea! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab vel deserunt fugit neque repudiandae dignissimos beatae, nulla eligendi animi eaque, quasi accusantium laudantium nam! Incidunt totam id ad voluptatibus esse? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi illum odio possimus aspernatur quibusdam recusandae. Omnis facilis delectus ipsam atque vitae possimus? Dicta totam quae placeat aspernatur nobis ullam animi?</p>
-        <iframe src=" https://vinicios000.github.io/projeto-cordel/" frameborder="0" height="500" width="350" ></iframe>
+        <iframe src="Paginas-extras/pag001.html" frameborder="0" height="500" width="350"
+        >
+    <p> Infelizmente seu navegador não é compatível com o site</p>
+    </iframe>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo facilis quis itaque dignissimos. Delectus nemo dicta ullam eveniet tenetur officiis tempore est reiciendis adipisci. Eligendi nisi quod totam beatae veniam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt expedita ea reprehenderit laboriosam quia magni deleniti sequi, officia cum? Omnis molestias aut quis, sapiente ex est exercitationem sint. Aliquam, facere. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore molestiae cum beatae quam animi alias, perspiciatis tenetur ut reiciendis at porro magnam dicta possimus vero quisquam architecto repellendus? Minus, mollitia?</p>
     </main>
     
