--- a/exercicios/ex025/forme002.html
+++ b/exercicios/ex025/forme002.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Teste de formulário</h1>
     <div>
-        <form action="cadastro.php" method="post">
+        <form action="cadastro.php" method="post" autocomplete="on">
         
                 <p>
                     <label for="iusu"> Nome de usuário: </label>
-                    <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="15" placeholder="Digite aqui" autocomplete="off">
+                    <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="15" placeholder="Digite aqui" autocomplete="username">
                 </p>
                 <p>
                     <label for="isenha">Senha: </label>
