--- a/exercicios/ex025/forme003.html
+++ b/exercicios/ex025/forme003.html
@@ -7,19 +7,37 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post"></form>
+    <form action="cadastro.php" method="post" autocomplete="on"></form>
 
     
     <p>
+        <!-- NOME -->
         <label for="inome"> Nome</label>
         <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Digite seu nome aqui" autocomplete="name">
     </p>
     
     <p>
+        <!-- MÉDIA -->
         <label for="imedia">Média </label>
-        <input type="number" name="media" id="imedia" required min="0" max="10" placeholder="0 a 10" step="0.1">
+        <input type="number" name="media" id="imedia" required min="0" max="10" placeholder="0 a 10" step="0.1" value="5">
     </p>
     <p>
+        <!-- MÊS -->
+        <label for="imes">Período Letivo</label>
+        <input type="month" name="mes" id="imes" required >
+    </p>
+    <P>
+        <!-- DIA DA PROVA -->
+        <label for="idia">Dia da prova</label>
+        <input type="date" name="mes" id="imes">
+    </P>
+    <p>
+        <!-- HORAS -->
+        <label for="ihora">horário da prova</label>
+        <input type="time" name="hora" id="ihora">
+    </p>
+    <p>
+
         <input type="submit" value="Enviar">
         <input type="reset" value="Liimpar">
     </p>
